<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettingsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="75dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblAllergens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/allergens"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swiCelery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Celery (Cel.)"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiCereals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Cereals including Gluten (Glu.)"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiCrustaceans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Crustaceans (Crus.)"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiEggs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/eggs"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiFish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/fish"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiLupin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/lupin"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiMilk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/milk"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiMolluscs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Molluscs (Moll.)"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiMustard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Mustard (Mus.)"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiNuts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/nuts"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiPeanuts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/peanuts"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiSesame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Sesame Seeds (Ses.)"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiSoya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/soya"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiSulphur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Sulphur Dioxide/Sulphites (Sul.)"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblDiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/other_dietary_requirements"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swiVegetarian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Vegetarian (V)"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swiVegan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Vegan (Ve)"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="561dp"
        android:layout_height="61dp"
        android:text="@string/save_allergen_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>